Text editing in navi buttons, alignment not fully correct, position not fully correct

--- a/private/styles/style.scss
+++ b/private/styles/style.scss
@@ -44,9 +44,12 @@ $color-2: white;
 
 .banner-navi-button {
     display:inline-block;
-    height:87px;
+    height:55px;
     background-color:cyan;
-    padding:32px 20px 0px 32px;
+    padding:32px 20px 0px 20px;
+    text-transform: uppercase;
+    text-align:center;
+    font-weight:500;
     
 }
 
